feat(vguide): structured CE source-slice mapping (issue #38)
- schema structured-ce-v1 -> v2 (additive): each trace segment gains a
  source slice {file, line, end_line} derived from the node's outgoing
  edges' file locations (CFANodes themselves have no location; edges are
  authoritative per CFAEdge javadoc)
- dummy/mixed-file/unavailable locations serialize as source:null
  (never inferred)
- tests: source null for dummy nodes, real slice from a sourced edge,
  schema version, compressed-trace determinism unchanged